- I added a color selector. I am ready to leave this world.

--- a/cyclewheelcolor.html
+++ b/cyclewheelcolor.html
@@ -2,9 +2,12 @@
 <html lang="en">
     <head>
         <title>Color Wheel</title>
+        <script src="js/jscolor.js"></script>
         <link rel="stylesheet" type="text/css" href="css/colors.css">
-        <script src="js/main.js"></script>
-        
+        <script src="js/CircularDoublyLinkedList.js"></script>
+        <script src="js/Main.js"></script>
+
+
     </head>
     <body>
         <div class="title">
@@ -66,7 +69,7 @@
                 <p id="SupplementaryTwo"> </p>
             </div>
 
-            <button id="Instance">custom color</button>
+            <input id="ColorSelector" data-jscolor="{preset:'dark large'}">
 
         </div>
         
