- I added a color selector. I am ready to leave this world.

--- a/cyclewheelcolor.html
+++ b/cyclewheelcolor.html
@@ -5,7 +5,7 @@
         <script src="js/jscolor.js"></script>
         <link rel="stylesheet" type="text/css" href="css/colors.css">
         <script src="js/CircularDoublyLinkedList.js"></script>
-        <script src="js/Main.js"></script>
+
 
 
     </head>
@@ -71,8 +71,15 @@
 
             <input id="ColorSelector" data-jscolor="{preset:'dark large'}">
 
+            <!--
+            This line is a test line to see how I can interact with the color return statements. :D
+            You can delete it any time, I'm just keeping it locally so I can see what I'm returning lol
+            <p id="testChange">Change me plz</p> -->
+
         </div>
-        
+
+
+        <script src="js/Main.js"></script>
     </body>
 </html>
         
