--- a/cyclewheelcolor.html
+++ b/cyclewheelcolor.html
@@ -13,6 +13,7 @@
         <script src="js/ntc.js"></script>
         <link rel="stylesheet" type="text/css" href="css/colors.css">
         <script src="js/CircularDoublyLinkedList.js"></script>
+        <script src="node_modules/requirejs/require.js"></script>
 
 
 
