- Colors are now saved - A table is dynamically created at startup and can be added to dynamically by traversing the CDLL.

--- a/cyclewheelcolor.html
+++ b/cyclewheelcolor.html
@@ -80,7 +80,9 @@
 
             <input id="ColorSelector" data-jscolor="{preset:'dark large'}">
             <button id="saveCustomColor" onclick="onSaveColorClick();return false;">Save Custom Color</button>
-            <table id="customColors">
+
+            <table id="customColors" style="text-align: center;align-items: center">
+
 
             </table>
 
