- Custom Color Palette is now available for testing. **KNOWN ISSUES** - BAd Clipping on the palette with other divs - While delete method is active, it doesn't work properly at all. Deletes the wrong color.

--- a/cyclewheelcolor.html
+++ b/cyclewheelcolor.html
@@ -26,12 +26,10 @@
 
 </head>
 <body>
+
 <div class="title">
     <h1>COLOR WHEEL</h1>
 </div>
-
-
-
 
 <div class="column" id="wheel">
     <div class="image">
@@ -62,8 +60,6 @@
     <div id="CurrentColor" class="space">
         <p id="ColorToChangeNoColor" class="wrapInline"></p>
         <p id="ColorToChange"> </p>
-
-
     </div>
 
     <div id="ComplementaryColor" class="space">
@@ -107,20 +103,7 @@
     </div>
 </div>
 <table id="customColors" style="text-align: center; align-items: center"></table>
-
-
-<p class="wrapInline" id-="tutText">Welcome to the Interactive Color Wheel! To begin, select an article of clothing
-    from the dropdown above. Once you've done that, select a color from the color wheel or the color picker above me. Your palettes
-    are saved, so feel free to return anytime! (P.S. Make sure you select an article of clothing first and then
-    click the color you'd like to browse.</p>
-
-
-
-
 <div id="container">
-    <div id="center"></div>
-    <div id="crosshair-x"></div>
-    <div id="crosshair-y"></div>
     <div class="field">1</div>
     <div class="field">2</div>
     <div class="field">3</div>
@@ -130,6 +113,13 @@
     <div class="field">6</div>
     -->
 </div>
+
+<p id-="tutText">Welcome to the Interactive Color Wheel! To begin, select an article of clothing
+    from the dropdown above. Once you've done that, select a color from the color wheel or the color picker above me. Your palettes
+    are saved, so feel free to return anytime! (P.S. Make sure you select an article of clothing first and then
+    click the color you'd like to browse.</p>
+
+
 <script src="js/Main.js"></script>
 </body>
 </html>
