- Better Tutorial Text **KNOWN ISSUES** - BAd Clipping on the palette with other divs if window resized - Temporary Fix for remove colors: Refresh the page.

--- a/cyclewheelcolor.html
+++ b/cyclewheelcolor.html
@@ -115,9 +115,9 @@
 </div>
 
 <p id-="tutText">Welcome to the Interactive Color Wheel! To begin, select an article of clothing
-    from the dropdown above. Once you've done that, select a color from the color wheel or the color picker above me. Your palettes
+    from the dropdown above. Once you've done that, select a color from the color wheel or the custom picker. Your palettes
     are saved, so feel free to return anytime! (P.S. Make sure you select an article of clothing first and then
-    click the color you'd like to browse.</p>
+    click the color you'd like to browse. double-click a color on the custom palette to remove it.</p>
 
 
 <script src="js/Main.js"></script>
