--- a/cyclewheelcolor.html
+++ b/cyclewheelcolor.html
@@ -102,17 +102,10 @@
         </select>
     </div>
 </div>
-<table id="customColors" style="text-align: center; align-items: center"></table>
-<div id="container">
-    <div class="field">1</div>
-    <div class="field">2</div>
-    <div class="field">3</div>
-    <div class="field">4</div>
-    <!--
-    <div class="field">5</div>
-    <div class="field">6</div>
-    -->
-</div>
+<table id="customColors" style="text-align: center;align-items: center">
+
+
+</table>
 
 <p id-="tutText">Welcome to the Interactive Color Wheel! To begin, select an article of clothing
     from the dropdown above. Once you've done that, select a color from the color wheel or the custom picker. Your palettes
