- Added support for SERPSTACK searches. API call and response is built and parsed into a variable. - Empty table created and formatted in HTML to be dynamically generated when the user chooses a color to search.

--- a/cyclewheelcolor.html
+++ b/cyclewheelcolor.html
@@ -113,6 +113,11 @@
     click the color you'd like to browse. double-click a color on the custom palette to remove it.</p>
 
 
+<table id="results_Grid">
+    <!-- This table will initially be empty and will be populated when the user chooses to search a color. -->
+</table>
+
+
 <script src="js/Main.js"></script>
 </body>
 </html>
