- Added Support for Shopping Specifically. Removed support for Google Image Searches.

--- a/cyclewheelcolor.html
+++ b/cyclewheelcolor.html
@@ -112,6 +112,8 @@
     are saved, so feel free to return anytime! (P.S. Make sure you select an article of clothing first and then
     click the color you'd like to browse. double-click a color on the custom palette to remove it.</p>
 
+<p id="Notice"> As we are an aggregator site, some items may be unavailable. If the item you select is a dead link, please let us know!</p>
+
 
 <table id="results_Grid">
     <!-- This table will initially be empty and will be populated when the user chooses to search a color. -->
