- Added support for SERPSTACK searches. API call and response is built and parsed into a variable. - Empty table created and formatted in HTML to be dynamically generated when the user chooses a color to search.

--- a/cyclewheelcolor.html
+++ b/cyclewheelcolor.html
@@ -54,6 +54,8 @@
     </div>
 </div>
 
+<!---- Change the '>' to '<' in the 'IF' statement. That's all-->
+
 <div class="column">
     <h2>Color Palette:</h2>
 
@@ -103,7 +105,6 @@
     </div>
 </div>
 <table id="customColors" style="text-align: center;align-items: center">
-
 
 </table>
 
